--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   },
   "dependencies": {
     "child-process-promise": "^2.2.1",
-    "filewatcher": "^3.0.1"
+    "filewatcher": "^3.0.1",
+    "http-server": "^0.11.1"
   },
   "devDependencies": {},
   "scripts": {
