hopefully this properly ignores the graphing files

--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,10 @@
 
 */test/repo_graph.svg
 */test/repo_graph.dot
-
+/test/repo_graph.svg
+/test/repo_graph.dot
+repo_graph.dot
+repo_graph.svg
 
 *.bin
 *.dylib
