--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,12 @@ repo_graph.dot
 repo_graph.svg
 /test/client/repo_graph.svg
 
+
+#dummy repo for testing and building ~/server/git.js
+*scriptster/
+*/scriptster
+*/scriptster/
+
 *.bin
 *.dylib
 
