--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "child-process-promise": "^2.2.1",
     "filewatcher": "^3.0.1",
     "http-server": "^0.11.1",
-    "nodegit": "^0.21.2"
+    "log-timeline": "^0.2.1",
+    "nodegit": "^0.21.2",
+    "npm": "^5.8.0"
   },
   "devDependencies": {},
   "scripts": {
