--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "express": "^4.16.3",
     "mmapfile": "^0.1.1",
+    "nodegit": "^0.21.2",
     "nodemon": "^1.17.2",
     "ws": "^5.1.0"
   }
