--- a/package.json
+++ b/package.json
@@ -9,11 +9,12 @@
   "scripts": {
     "postinstall": "node build.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node start.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "chokidar": "^2.0.3",
     "express": "^4.16.3",
     "mmapfile": "^0.1.1",
     "nodegit": "^0.21.2",
