updated the server.js to run synchronous child promises for git add/commit and inserted the git-big-picture cmd below these

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "child-process-promise": "^2.2.1",
     "chokidar": "^2.0.3",
     "express": "^4.16.3",
     "mmapfile": "^0.1.1",
