got mergeview working in codemirror\!

--- a/package.json
+++ b/package.json
@@ -17,8 +17,11 @@
     "child-process-promise": "^2.2.1",
     "chokidar": "^2.0.3",
     "code-forensics": "^0.15.1",
+    "diff2html": "^2.3.3",
+    "diff2html-cli": "^2.5.4",
     "express": "^4.16.3",
     "mmapfile": "^0.1.1",
+    "node-giff": "0.0.7",
     "nodegit": "^0.21.2",
     "nodemon": "^1.17.2",
     "vis": "^4.21.0",
