--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "diff2html-cli": "^2.5.4",
     "dirty-object": "^1.0.6",
     "express": "^4.16.3",
+    "git-log-to-json": "^1.1.1",
     "mmapfile": "^0.1.1",
     "node-giff": "0.0.7",
     "nodegit": "^0.21.2",
