--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,6 +7,20 @@
         "functional": "cpp",
         "memory": "cpp",
         "istream": "cpp",
-        "streambuf": "cpp"
+        "streambuf": "cpp",
+        "cctype": "cpp",
+        "cmath": "cpp",
+        "csignal": "cpp",
+        "cstdarg": "cpp",
+        "cstddef": "cpp",
+        "cstdio": "cpp",
+        "cstdlib": "cpp",
+        "cstring": "cpp",
+        "ctime": "cpp",
+        "cwchar": "cpp",
+        "cwctype": "cpp",
+        "condition_variable": "cpp",
+        "thread": "cpp",
+        "*.ipp": "cpp"
     }
 }
