added a process killer to beginning of server.js to kill any alice processes that remained after a server or start.js crash

--- a/package.json
+++ b/package.json
@@ -21,11 +21,14 @@
     "diff2html-cli": "^2.5.4",
     "dirty-object": "^1.0.6",
     "express": "^4.16.3",
+    "find-process": "^1.1.1",
     "git-log-to-json": "^1.1.1",
     "mmapfile": "^0.1.1",
     "node-giff": "0.0.7",
     "nodegit": "^0.21.2",
     "nodemon": "^1.17.2",
+    "ps-node": "^0.1.6",
+    "terminate": "^2.1.0",
     "vis": "^4.21.0",
     "ws": "^5.1.0"
   },
