test using redis database for speeding up server handling of git-related processes

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "node-giff": "0.0.7",
     "nodegit": "^0.21.2",
     "ps-node": "^0.1.6",
+    "redis": "^2.8.0",
     "terminate": "^2.1.0",
     "vis": "^4.21.0",
     "ws": "^5.1.0"
