--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bower": "^1.8.4",
     "child-process-promise": "^2.2.1",
     "chokidar": "^2.0.3",
     "code-forensics": "^0.15.1",
@@ -26,6 +27,7 @@
     "mmapfile": "^0.1.1",
     "node-giff": "0.0.7",
     "nodegit": "^0.21.2",
+    "pako": "^1.0.6",
     "ps-node": "^0.1.6",
     "redis": "^2.8.0",
     "terminate": "^2.1.0",
