got the branch head option list working in the client!

--- a/package.json
+++ b/package.json
@@ -30,8 +30,10 @@
     "pako": "^1.0.6",
     "ps-node": "^0.1.6",
     "redis": "^2.8.0",
+    "socket.io": "^2.1.1",
     "terminate": "^2.1.0",
     "vis": "^4.21.0",
+    "websocket": "^1.0.26",
     "ws": "^5.1.0"
   },
   "devDependencies": {
