--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "find-process": "^1.1.1",
     "git-log-to-json": "^1.1.1",
     "json5": "^1.0.1",
+    "list-directory-contents": "0.0.3",
     "mmapfile": "^0.1.1",
     "node-giff": "0.0.7",
     "pako": "^1.0.6",
