--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -69,7 +69,11 @@
         "xtree": "cpp",
         "filesystem": "cpp",
         "codecvt": "cpp",
-        "__locale": "cpp"
+        "__locale": "cpp",
+        "__split_buffer": "cpp",
+        "__tree": "cpp",
+        "bitset": "cpp",
+        "iterator": "cpp"
     },
     "editor.wordWrap": "on",
     "editor.wrappingIndent": "indent"
