--- a/cards/package.json
+++ b/cards/package.json
@@ -26,6 +26,7 @@
     "gojs": "^1.8.20",
     "http": "0.0.0",
     "install": "^0.11.0",
+    "jquery": "^3.3.1",
     "line-by-line": "^0.1.6",
     "magic-window": "^1.0.9",
     "npm": "^6.1.0",
