--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -83,7 +83,13 @@
         "string_view": "cpp",
         "forward_list": "cpp",
         "unordered_set": "cpp",
-        "valarray": "cpp"
+        "valarray": "cpp",
+        "complex": "cpp",
+        "cfenv": "cpp",
+        "cinttypes": "cpp",
+        "hashtable": "cpp",
+        "__config": "cpp",
+        "__nullptr": "cpp"
     },
     "editor.wordWrap": "on",
     "editor.wrappingIndent": "indent"
