--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "ps-node": "^0.1.6",
     "redis": "^2.8.0",
     "socket.io": "^2.1.1",
+    "sort-json": "^2.0.0",
+    "sort-json-array": "^0.1.7",
     "terminate": "^2.1.0",
     "uglify-js": "^3.3.27",
     "vis": "^4.21.0",
