--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@ronomon/opened": "^1.4.1",
     "amdefine": "^1.0.1",
     "bower": "^1.8.4",
     "child-process-promise": "^2.2.1",
