--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "pako": "^1.0.6",
     "ps-node": "^0.1.6",
     "redis": "^2.8.0",
+    "sendmail": "^1.4.1",
     "socket.io": "^2.1.1",
     "sort-json": "^2.0.0",
     "sort-json-array": "^0.1.7",
