hotspot.js is an attempt to write our own mobile hotspot server to get around the windows 10 limitation when not connected to an ISP

--- a/package.json
+++ b/package.json
@@ -29,9 +29,11 @@
     "list-directory-contents": "0.0.3",
     "mmapfile": "^0.1.1",
     "node-giff": "0.0.7",
+    "node-hotspot": "^0.1.7",
     "pako": "^1.0.6",
     "ps-node": "^0.1.6",
     "redis": "^2.8.0",
+    "sendmail": "^1.4.1",
     "socket.io": "^2.1.1",
     "sort-json": "^2.0.0",
     "sort-json-array": "^0.1.7",
