finally got a terminal working on the windows machine

--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "list-directory-contents": "0.0.3",
     "mmapfile": "^0.1.1",
     "node-giff": "0.0.7",
+    "node-gyp": "^3.7.0",
     "node-hotspot": "^0.1.7",
     "node-pty": "^0.7.6",
     "pako": "^1.0.6",
@@ -42,6 +43,7 @@
     "terminate": "^2.1.0",
     "uglify-js": "^3.3.27",
     "vis": "^4.21.0",
+    "web-terminal": "^0.7.0",
     "websocket": "^1.0.26",
     "ws": "^5.1.0",
     "xterm": "^3.5.1"
